2001-09-08  Wang Jian  <lark@linux.net.cn>

	* configure.in(ALL_LINGUAS): Renamed zh_CN.GB2312 to zh_CN.

2001-08-31  Abel Cheung  <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): zh_TW.Big5 -> zh_TW

2001-08-10  Jaka Mocnik  <jaka@gnu.org>

	* applied a patch to fix problems on ppc platform.

2001-08-10  Jaka Mocnik  <jaka@gnu.org>

	* ghex.spec.in: updated. patch by Ludovic Danigo
	<ludovic.danigo@worldonline.fr>.

2001-07-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "nn" to ALL_LINGUAS.
	
2001-05-03 John Fleck <jfleck@inkstain.net>

	* patch to src/preferences.c to activate the help button on the
	preferences dialog. fixes bugzilla.gnome.org bug #54073

2001-05-03  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c: applied a patch for font width handling.

2001-04-15  Nathan Cullen <furyu@fuse.net>

	* src/ghex.h broke up print_document into smaller functions
	(print_document): deleted declaration
	(ghex_print_job_info_new): added delcaration
	(ghex_print_job_info_destroy): added declaration
	(ghex_print_job_execute): added declaration
	(GHexPrintJobInfo): added printing range, preview flag, printer
	* src/print.c refactored print_document, merged changes with AleX's
	patch.
	(preview_destroy_cb): deleted, functionality moved to ui.c
	(print_document): deleted, refactored
	(start_job): delted empty function
	(end_job): delted empty function
	(print_header): replaced spaces with tabs
	(ghex_print_job_info_new): creates a new GHexPrintJobInfo object
	(ghex_print_job_info_destroy): deallocates a GHexPrintJobInfo object
	(ghex_print_job_execute): executes the job described by a GHexPrintJob
	Info object
	* src/ui.c added print range and preview button to print dialog
	(print_dialog_clicked_cb): deleted, functionality in
	ghex_print_run_dialog
	(print_cb): modified to call ghex_print
	(print_preview_cb): modified to call ghex_print
	(ghex_print): added function. prints or previews current document