@@ -1,3 +1,9 @@
+2001-11-13  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/gtkhex.c: added block marking and clipboard handling.
+	* src/print.c: fixed to work with gnome-print >= 0.32.
+	* configure.in: check for GnomePrint >= 0.32.
+
 2001-09-08  Wang Jian  <lark@linux.net.cn>
 
 	* configure.in(ALL_LINGUAS): Renamed zh_CN.GB2312 to zh_CN.
